# webagents

./: .gitignore  .gitmodules  404.html  CNAME  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE_WIDGETTEMPLATERENDERER.md  PAYMENTSKILL_X402_DEFAULT.md  PLUGIN_SYSTEM_IMPLEMENTATION.md  README.md  RELEASE.md  TODO.md  WIDGET_IMPLEMENTATION_COMPLETE.md  WIDGET_SYSTEM_SUMMARY.md  X402_INTEGRATION_TEST_RESULTS.md  X402_TEST_RESULTS.md  debug_agent.md  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-ecosystem.txt  requirements.txt  run_x402_tests.sh  sitemap.xml
blog/: index.html
python/: .gitignore  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
python/compliance/: AGENT.md  schema.md
python/compliance/runner/: skill.py
python/compliance/tests/transport/: completions-streaming.md  completions-tools.md
python/docs/: discovery.md  getting-started.md  index.md  skills.md  transports.md
python/tests/: test_auth_skill.py  test_byok.py  test_chats_skill.py  test_completions_payment_preflight.py  test_crewai_skill.py  test_decorators.py  test_llm_proxy_skill.py  test_long_term_memory_skill.py  test_lsp_skill.py  test_nli_skill.py  test_payment_skill.py  test_payment_skill_usage.py  test_payment_transport_agnostic.py  test_payment_x402_skill.py  test_plugin_skill.py  test_portal_connect_skill.py  test_social_skill.py  test_transport_a2a.py  test_transport_realtime.py  test_ucp_integration.py  test_webui_skill.py  test_x_com.py  test_zapier_skill.py
python/tests/agents/core/: test_base_agent_http.py  test_base_agent_init.py  test_base_agent_quick.py
python/tests/cli/client/: __init__.py  test_daemon_client.py
python/tests/daemon/: __init__.py  test_cron.py
python/tests/docs/: test_doc_examples.py  test_snippet_syntax.py
python/tests/integration/: __init__.py  test_connected_agents.py  test_discovery_skill_integration.py  test_dynamic_agents_integration.py  test_x402_agent_ab_http_integration.py
python/tests/interop/: serve_echo.py  test_adapter_compat.py  test_cross_language.py
python/tests/loader/: __init__.py  test_hierarchy.py
python/tests/server/: test_dynamic_agents.py  test_monitoring.py  test_server_core.py  test_tool_execution.py
python/tests/server/plugins/: test_local_file_source.py
python/tests/skills/core/: conftest.py  test_mcp_skill.py
python/tests/skills/local/: test_filesystem_skill.py
python/tests/skills/local/browser/: __init__.py  test_browser_automation_skill.py
python/webagents/: __init__.py  daemon_entry.py
python/webagents/agents/builtin/: __init__.py
python/webagents/agents/core/: base_agent.py
python/webagents/agents/skills/: __init__.py
python/webagents/agents/skills/core/llm/: __init__.py  models.py
python/webagents/agents/skills/core/planning/: __init__.py
python/webagents/agents/skills/core/transport/: __init__.py
python/webagents/agents/skills/ecosystem/crewai/: skill.py
python/webagents/agents/skills/ecosystem/database/: __init__.py  skill.py
python/webagents/agents/skills/ecosystem/mongodb/: __init__.py
python/webagents/agents/skills/ecosystem/openai/: __init__.py
python/webagents/agents/skills/ecosystem/replicate/: README.md
python/webagents/agents/skills/ecosystem/ucp/: __init__.py  schemas.py
python/webagents/agents/skills/ecosystem/x_com/: __init__.py
python/webagents/agents/skills/ecosystem/zapier/: README.md  __init__.py
python/webagents/agents/skills/local/auth/: README.md  __init__.py  jwks.py  skill.py
python/webagents/agents/skills/local/browser/: __init__.py
python/webagents/agents/skills/local/checkpoint/: __init__.py
python/webagents/agents/skills/local/cli/: __init__.py
python/webagents/agents/skills/local/filesystem/: skill.py
python/webagents/agents/skills/local/lsp/: __init__.py  languages.py  skill.py
python/webagents/agents/skills/local/memory/: __init__.py  skill.py
python/webagents/agents/skills/local/plugin/: executor.py  skill.py
python/webagents/agents/skills/local/rag/: __init__.py
python/webagents/agents/skills/local/sandbox/: README.md
python/webagents/agents/skills/local/session/: skill.py
python/webagents/agents/skills/local/testrunner/: skill.py
python/webagents/agents/skills/local/todo/: README.md  skill.py
python/webagents/agents/skills/local/webui/: __init__.py
python/webagents/agents/skills/robutler/: __init__.py  storage.py
python/webagents/agents/skills/robutler/auth/: __init__.py  skill.py
python/webagents/agents/skills/robutler/chats/: __init__.py  skill.py
python/webagents/agents/skills/robutler/crm/: __init__.py
python/webagents/agents/skills/robutler/discovery/: README.md  __init__.py  skill.py
python/webagents/agents/skills/robutler/handoff/: __init__.py
python/webagents/agents/skills/robutler/integrations/: __init__.py  skill.py
python/webagents/agents/skills/robutler/kv/: __init__.py  skill.py
python/webagents/agents/skills/robutler/message_history/: __init__.py
python/webagents/cli/client/: __init__.py  auto_start.py  daemon_client.py
python/webagents/cli/commands/: agent.py  config.py  cron.py  daemon.py  intent.py  namespace.py  session.py  skill.py
python/webagents/cli/daemon/: __init__.py  manager.py  watcher.py
python/webagents/cli/daemon/service/: systemd.py
python/webagents/cli/loader/: agent_md.py
python/webagents/cli/platform/: auth.py  discovery.py
python/webagents/cli/repl/: history.py
python/webagents/cli/state/: __init__.py
python/webagents/cli/templates/: github.py
python/webagents/cli/ui/: __init__.py
python/webagents/cli/webui/: .gitignore  tailwind.config.js
python/webagents/cli/webui/src/: index.css
python/webagents/crypto/: __init__.py
python/webagents/server/: monitoring.py
python/webagents/server/core/: app.py  models.py  monitoring.py
python/webagents/server/extensions/: cache_invalidation.py  interface.py  local_file_source.py
python/webagents/server/storage/: __init__.py
python/webagents/server/sync/: __init__.py
python/webagents/uamp/: __init__.py  events.py  types.py
(+1004 files in other folders)
