[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webagents"
version = "0.3.5"
description = "Foundation framework for the Web of Agents - build, serve and monetize AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "robutler.ai"}
]
keywords = ["ai", "agents", "llm", "uamp", "webagents", "skills", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "tiktoken>=0.5.0",
    "colorama>=0.4.6",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    # Daemon
    "watchdog>=4.0.0",
    "apscheduler>=3.10.0",
    "croniter>=2.0.0",
    "websockets>=12.0",
    # LLM providers
    "openai>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "google-genai>=1.0.0",
    "anthropic>=0.3.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "chromadb>=1.4.0",
]
scraping = [
    "trafilatura>=1.12.0",
]
tui = [
    "textual>=1.0.0",
]
lsp = [
    "multilspy>=0.0.15",
]
all = [
    "webagents[llm,embeddings,scraping,tui,lsp]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
]
examples = [
    "openai-agents>=0.0.16",
]

[project.scripts]
webagents = "webagents.__main__:main"
webagentsd = "webagents.daemon_entry:main"
robutler = "webagents.robutler_entry:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.urls]
Homepage = "https://robutler.ai/docs/webagents"
Repository = "https://github.com/robutlerai/webagents"
Issues = "https://github.com/robutlerai/webagents/issues"
Documentation = "https://robutler.ai/docs/webagents"